--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "license": "EPL-2",
+  "license": "EPL-2.0",
   "devDependencies": {
     "shadow-cljs": "^2.20.5"
   },
   "dependencies": {
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "preact": "10.11.2"
   }
 }
