part in manifest

--- a/part4/manifest.json
+++ b/part4/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Learn You A Kee-Frame",
-    "short_name": "lyakf",
+    "name": "Learn You A Kee-Frame - Part4",
+    "short_name": "lyakf-part4",
     "description": "Example PWA using re-frame/kee-frame",
     "start_url": "/learn-you-a-keeframe/part4/",
     "id": "/learn-you-a-keeframe/part4/",
